test/fails/bad_types/parameterized1.lgl
tag a is vec<2>;
tag a2 is a;
tag b is vec<3>;
tag p<`t : vec<2>> is vec<2>;
tag pl<`t : vec<2>> is `t;
tag bl<`t : b> is `t;
tag pany<`t : vec> is vec<2>;
tag p3<`t : vec<3>> is pany<`t>;
tag r<`t : a> is vec<3>;

void main() {
    p<pl<a>> s1 = [1., 1.];
    pl<a> s2 = s1; // Not a subtype cause 'p' sends back to the top type
}